--- a/layout/layout.html
+++ b/layout/layout.html
@@ -16,7 +16,7 @@
             border-radius: 5px;
             box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
             overflow: hidden;
-            font-family: 'Monaco', Monospace;
+            font-family: 'Verdana', Monospace;
             font-size: 16px;
         }
         
@@ -29,7 +29,10 @@
         td {
             padding: 20px 20px;
         }
-        
+        input {
+            font-family: 'Lucida Console', Monospace;
+            font-size: 16px;
+        }
         tr:nth-child(even) {
             background: #eeeeee;
         }
