--- a/layout/layout.html
+++ b/layout/layout.html
@@ -3,23 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale="1.0">
-    <title>CSV Viewer</title>
+    <title>Pokemon Stats Viewer</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <style>
+        .header-title {
+            font-family: 'Lucida Console', Monospace;
+            text-align: center;
+            font-size: 30px;
+        }
         h1 {
             font-family: 'Lucida Console', Monospace;
             text-align: center;
             font-size: 30px;
         }
-        table {
+        h3 {
+            font-family: 'Lucida Console', Monospace;
+            text-align: center;
+            font-size: 16px;
+        }
+        .table {
             border-collapse: collapse;
             border-radius: 5px;
             box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
             overflow: hidden;
             font-family: 'Verdana', Monospace;
             font-size: 16px;
+            width: 100%;
         }
-        
+        .data-content {
+            padding: 10px 20px;
+        }
+        .text-muted {
+            font-family: 'Lucida Console', Monospace;
+            text-align: center;
+            font-size: 16px;
+        }
+        .csvSelectorBtn {
+            font-family: 'Lucida Console', Monospace;
+            font-size: 16px;
+        }
         th {
             background: #900D09;
             color: #ffffff;
@@ -27,7 +49,7 @@
         }
         th,
         td {
-            padding: 20px 20px;
+            padding: 10px 20px;
         }
         input {
             font-family: 'Lucida Console', Monospace;
@@ -39,9 +61,49 @@
     </style>
 </head>
 <body>
-    <h1>Pokemon Table Viewer</h1>
-    <input type="file" id="csvFileInput" style="padding-bottom: 15px">
-    <table id="csvRoot"></table>
+    <!-- <div class="container">
+        <nav class="navbar navbar-expand-md navbar-light">
+            <a href="#" class="navbar-brand">Bootstrap 5</a>
+            <button 
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#toggleMobileMenu"
+                aria-controls="toggleMobileMenu"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+                >
+                <span class="navbar-toggler-icon"></span>
+            </button>    
+            <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <ul class="navbar-nav text-center">
+                    <li>
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Charts</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Table Viewer</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div> -->
+    <h1 class="header-title">Pokemon Stats Viewer
+    <small class="text-muted">Select a csv file to view table</small>
+    </h1>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+
+    <input type="file" id="csvFileInput" class="csvSelectorBtn" style="padding-bottom: 15px">
+    <table id="csvRoot" class="table"></table>
 
     <script src="lib/papaparse.min.js"></script>
     <script type="module" src="scripts/main.js"></script>
