--- a/layout/layout.html
+++ b/layout/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale="1.0">
     <title>Pokemon Stats Viewer</title>
-    <link rel="shortcut icon" href="img_src/pokeball.png">
+    <link rel="shortcut icon" href="img_src/quaxly-icon.png">
     <style>
         .header-title {
             font-family: 'Lucida Console', Monospace;
@@ -25,11 +25,6 @@
             text-align: center;
             font-size: 25px;
         }
-        h3 {
-            font-family: 'Lucida Console', Monospace;
-            text-align: center;
-            font-size: 16px;
-        }
         .table {
             border-collapse: collapse;
             border-radius: 10px;
@@ -39,13 +34,16 @@
             font-size: 16px;
             width: 100%;
         }
-        .data-content {
-            padding: 20px 30px;
-        }
         .text-muted {
             font-family: 'Lucida Console', Monospace;
             text-align: center;
             font-size: 16px;
+        }
+        a {
+            font-size: 16px;
+        }
+        .data-row {
+            padding: 20px 20px;
         }
         .csvSelectorBtn {
             font-family: 'Lucida Console', Monospace;
@@ -57,9 +55,6 @@
             text-align: left;
         }
         th,
-        td {
-            padding: 10px 20px;
-        }
         input {
             font-family: 'Lucida Console', Monospace;
             font-size: 16px;
@@ -75,6 +70,12 @@
         <small class="text-muted">Select a csv file to view table</small>
         </span>
     </div>
+    <div class="header-title">
+        <small class="text-muted">All scraped data is based on </small><a href="https://pokemondb.net/">Pokemondb.net</a>
+    </div>
+    <div class="header-title">
+        <small class="text-muted">To view csv files go to: csv_data folder</small>
+    </div>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
@@ -86,8 +87,13 @@
 
     <input type="file" id="csvFileInput" class="csvSelectorBtn" style="padding-bottom: 15px">
     <table id="csvRoot" class="table"></table>
-    
+
     <script src="lib/papaparse.min.js"></script>
     <script type="module" src="scripts/main.js"></script>
+    <!-- TODO: Add Search Bar -->
+    <!-- TODO: Add Table Filtering
+                Sort by: 
+                Type filter: 
+                Stats filter: -->
 </body>
 </html>
