--- a/layout/layout.html
+++ b/layout/layout.html
@@ -49,6 +49,9 @@
             font-family: 'Lucida Console', Monospace;
             font-size: 16px;
         }
+        .container-lg{
+            width: 100%;
+        }
         th {
             background: #900D09;
             color: #ffffff;
@@ -65,31 +68,34 @@
     </style>
 </head>
 <body>
-    <div class="header-title">
-        <a href="#"><img src="img_src/pokeball.png"></a><span class="header-title">Pokemon Stats Viewer
-        <small class="text-muted">Select a csv file to view table</small>
-        </span>
-    </div>
-    <div class="header-title">
-        <small class="text-muted">All scraped data is based on </small><a href="https://pokemondb.net/">Pokemondb.net</a>
-    </div>
-    <div class="header-title">
-        <small class="text-muted">To view csv files go to: csv_data folder</small>
-    </div>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    
+        <div class="header-title">
+            <a href="#"><img src="img_src/pokeball.png"></a><span class="header-title">Pokemon Stats Viewer
+            <small class="text-muted">Select a csv file to view table</small>
+            </span>
+        </div>
+        <div class="header-title">
+            <small class="text-muted">All scraped data is based on </small><a href="https://pokemondb.net/">Pokemondb.net</a>
+        </div>
+        <div class="header-title">
+            <small class="text-muted">To view csv files go to: csv_data folder</small>
+        </div>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
-    <input type="file" id="csvFileInput" class="csvSelectorBtn" style="padding-bottom: 15px">
-    <table id="csvRoot" class="table"></table>
-
-    <script src="lib/papaparse.min.js"></script>
-    <script type="module" src="scripts/main.js"></script>
+        <input type="file" id="csvFileInput" class="csvSelectorBtn" style="padding-bottom: 15px">
+        <div class="container-lg">
+            <table id="csvRoot" class="table"></table>
+        </div>
+        <script src="lib/papaparse.min.js"></script>
+        <script type="module" src="scripts/main.js"></script>
+   
     <!-- TODO: Add Search Bar -->
     <!-- TODO: Add Table Filtering
                 Sort by: 
